# openpolicedata

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
conda/: requirements-conda.txt  requirements-pip.txt
contributing/: BEGINNERS_GUIDE.MD
dev/: ADDING_DATASETS.MD  pypi_upload_checklist.md  pypi_upload_checklist.txt  requirements-conda.txt  requirements-docs.txt  requirements-pip.txt  requirements-test.txt
doc/: data_source_tracking.csv
docs/: conf.py  index.md  requirements.txt  requirements.yml
docs/source/: api.md  api_data.rst  api_dataset_id.rst  api_datasets.rst  api_exceptions.rst  api_preproc.rst  api_utils.rst  conf.py  documentation.md  index.md  index.rst  modules.rst  openpolicedata.data_loaders.rst  openpolicedata.deprecated.rst  openpolicedata.httpio.rst  openpolicedata.rst  usage.rst
docs/source/_static/: switcher.json
docs/source/_static/css/: custom.css
docs/source/api/: datasets.rst  index.rst  source.rst
docs/source/citations/: index.md
docs/source/datasets/: index.ipynb  index.rst  source_table_dictionary.ipynb
docs/source/examples/: index.ipynb  index.md  index.rst
docs/source/getting_started/: data_specification.ipynb  date_filtering.ipynb  index.ipynb  index.rst  installation.rst  related_table.ipynb  year_filtering.ipynb
docs/source/resources/: index.md  index.rst
docs/source/troubleshooting/: index.md
notebooks/: 20220413_demo.ipynb  basic_data_analysis_Virginia.ipynb  basic_usage.ipynb  denver_generate_test_data.ipynb  ex_plotting_data.ipynb  gen_sources_map.ipynb
openpolicedata/: __init__.py  _converters.py  _datasets.py  _preproc_utils.py  _version.py  _version.txt  data.py  data_loaders.py  dataset_id.py  datasets.py  datetime_parser.py  defs.py  exceptions.py  log.py  preproc.py  utils.py
openpolicedata/data_loaders/: __init__.py  arcgis_class.py  carto.py  ckan.py  combine_dataset.py  csv_class.py  data_loader.py  excel.py  html.py  opendatasoft.py  socrata.py
openpolicedata/deprecated/: _decorators.py  _pandas.py  _typing.py  datasetsCompat.py  messages.py  source_table_compat.py
openpolicedata/httpio/: README.rst  README.txt  __init__.py
src/: DataLoaders.py  OpenDataTable.py  data.py  data_loaders.py  datasets.py
tests/: README.md  conftest.py  git_diff.txt  test_arcgis.py  test_changed_rows.py  test_check_compat_source_table.py  test_data.py  test_data_loaders.py  test_dataset_filtering.py  test_dataset_id.py  test_datasets.py  test_datasets_fixture.py  test_date_parser.py  test_defs.py  test_deprecated.py  test_loader_arcgis.py  test_loader_carto.py  test_loader_ckan.py  test_loader_combined.py  test_loader_csv.py  test_loader_excel.py  test_loader_html.py  test_loader_opendatasoft.py  test_loader_socrata.py  test_loaders_general.py  test_log.py  test_onetime_marked.py  test_opd_data1.py  test_opd_data2.py  test_opd_data3.py  test_preproc.py  test_source_init.py  test_source_list.py  test_sources.py  test_sync_httpio.py  test_timezone.py  test_utils.py
tests/1_unit_data_loaders/arcgis/: test_MM-DD-YYYY_date_dayton.py  test_YYYY-MM-DD_date_tucson.py
tests/1_unit_data_loaders/carto/: test_main_philly_ois.py  test_year_philly_crashes.py
tests/1_unit_data_loaders/loader_arcgis/: test_CRS_error_evanston.py  test_MMM_DD_ YYYY_date_asheville.py  test_MM_DD_ YY_date_louisville.py  test_YYYY-MM_date_charlotte.py  test_YYYYMMDDHHMMSS_date_asheville.py  test_YYYYMMDD_date_asheville.py  test_YYYY_MM_DD_date_santa_rosa.py  test_YYYY_date_charlotte.py  test_YYYY_date_philadelphia.py  test_loader_arcgis.py  test_main_tacoma.py  test_query_gilbert.py
tests/1_unit_data_loaders/loader_socrata/: test_geopandas_orlando.py  test_main_mixed_date_seattle.py  test_mixed_date_bloomington.py  test_mixed_date_seattle.py  test_multi_agency_connecticut.py  test_none_year_field_cincinnati.py  test_numeric_year_newyork.py  test_quarterly_date_bloomington.py  test_socrata_general.py  test_yyyymmdd_text_date_new_orleans.py
tests/1_unit_data_loaders/socrata/: test_geopandas_orlando.py  test_numeric_year_newyork.py
tests/1_unit_data_source/: test_data.py
tests/1_unit_data_source_loading/: test_data_source_arcgis_indianapolis.py  test_data_source_carto_philadelphia.py  test_data_source_ckan_virginia.py  test_data_source_csv_jacksonville.py  test_data_source_excel_oakland.py  test_data_source_html_cedarlake.py  test_data_source_opendatasoft_longbeach.py  test_data_source_socrata_coloradosprings.py  test_data_source_socrata_multi_agency_connecticut.py
tests/2_many_source_testing/: test_api.py  test_excel.py  test_many_source.py
tests/loader_socrata/: test_mixed_date_seattle.py
tests/version_testing/: check_opd_versions.py  import_packaging.py  opd_test_run.py  opd_version_test.sh
