[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openpolicedata"
dynamic = ["version"]
authors = [
  { name="Matt Sowd", email="openpolicedata@gmail.com" },
  { name="Paul Otto", email="potto@ieee.org" },
]
description = "The OpenPoliceData (OPD) Python library is the most comprehensive centralized public access point for incident-level police data in the United States. OPD provides easy access to 395+ incident-level datasets for about 4800 police agencies. Types of data include traffic stops, use of force, officer-involved shootings, and complaints."
readme = "README.md"
license = {file = 'LICENSE'}
requires-python = ">=3.8"
classifiers = [
    'Intended Audience :: Science/Research',
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
    "openpyxl",
    "numpy",
    "packaging",
    "pandas<3.0.0",
    "requests",
    "sodapy",
    "tqdm",
    "typing-extensions",
    "xlrd"
]
keywords = [
    "police data",
    "use of force",
    "traffic",
    "stops",
    "complaints",
    "officer-involved",
    "shootings",
    "pandas",
    "arcgis",
    "socrata",
    "police transparency",
    "police accountability"
]

[project.urls]
homepage = "https://openpolicedata.readthedocs.io/"
documentation = "https://openpolicedata.readthedocs.io/en/stable/documentation.html"
repository = "https://github.com/openpolicedata/openpolicedata"
tracker = "https://github.com/openpolicedata/openpolicedata/issues"

[project.optional-dependencies]
optional = ['rapidfuzz', 'msoffcrypto-tool']
test = ['pytest']

[tool.setuptools.dynamic]
version = {file = ".\\openpolicedata\\_version.txt"}
# version = {attr = "openpolicedata.__version__"}

# I think this is true by default...
# [tool.setuptools]
# include-package-data = true

[tool.setuptools.packages.find]
include = ["openpolicedata", "openpolicedata.*"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp():DeprecationWarning:tqdm:",
    "ignore:datetime.datetime:DeprecationWarning:.*openpyxl:",
    "ignore:datetime.datetime.utcfromtimestamp():DeprecationWarning:.*tz:",
    "ignore:Passing a SingleBlockManager to Series.*:DeprecationWarning:geopandas:",
    # "ignore:distutils Version classes are deprecated. Use packaging.version instead.*:DeprecationWarning::",
    # "ignore:An exception was ignored while fetching the attribute `__array_interface__` from an object of type 'Polygon'*:DeprecationWarning:geopandas.*:"
]