[metadata]
name = openpolicedata
author = Matt Sowd
author_email =openpolicedata@gmail.com
description = A Python package for accessing police traffic stop, arrests, use of force, etc. data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openpolicedata/openpolicedata
project_urls =
    Bug Tracker = https://github.com/openpolicedata/openpolicedata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = openpolicedata
# Min pandas Python version is 3.8
python_requires = >=3.8   
install_requires =
    openpyxl
    numpy
    pandas
    pyproj
    requests
    sodapy
    thefuzz
    tqdm
    xlrd


[options.packages.find]
where = .
