[metadata]
name = openpolicedata
author = Matt Sowd
author_email =openpolicedata@gmail.com
description = A Python library providing easy access to 276+ incident-level open datasets released by police departments including traffic stops, use of force, officer-involved shootings, and complaints data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openpolicedata/openpolicedata
project_urls =
    Bug Tracker = https://github.com/openpolicedata/openpolicedata/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = 
    police data
    use of force
    traffic
    stops
    complaints
    officer-involved
    shootings
    pandas
    arcgis
    socrata
    police transparency
    police accountability

[options]
package_dir =
    = .
packages = openpolicedata
# mybinder requires 3.7
python_requires = >=3.7
install_requires =
    openpyxl
    numpy
    packaging
    pandas
    pyproj
    requests
    sodapy
    tqdm
    xlrd

[options.extras_require]
rapidfuzz = rapidfuzz

[options.packages.find]
where = .
